--- a/sass/_functions.scss
+++ b/sass/_functions.scss
@@ -1,8 +1,8 @@
-$base-font-size: 18px;
+// $base-font-size: 18px;
 
-@function em($px, $base: $base-font-size) {
-    @return ($px / $base) * 1em;
-}
+// @function em($px, $base: $base-font-size) {
+//     @return ($px / $base) * 1em;
+// }
 
 
 @function colorHalf($color, $alpha) {
