--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,6 +4,9 @@ $proxima-nova-sb: 'proxima_nova_semibold';
 $proxima-nova-light: 'proxima_nova_light';
 $noto-serif: 'Noto Serif';
 
+// Constants
+$golden: 1.5; //Redondeado de 1.61803398875
+
 // Weights
 $light: 300;
 $regular: 400;
