--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,11 @@
+@import "bourbon/bourbon";
+@import "variables.scss";
+@import "functions.scss";
+@import "mixins.scss";
+
+
+$body-size: em(18px);
+
 // Fuentes
  @font-face {
     font-family: 'proxima_nova_semibold';
@@ -25,10 +33,6 @@
 
 }
 
-
-@import "variables.scss";
-@import "functions.scss";
-@import "mixins.scss";
 
 
 // ATRIBUTES
@@ -142,7 +146,7 @@ body {
     color: $dark-grey;
     font: {
         family: $noto-serif;
-        size: 1.125em;
+        size: $body-size;
         weight: $regular;
     }
     line-height: $body-line;
@@ -226,10 +230,11 @@ h1, h2, h3, h4, h5, h6 {
 p {
     font: {
         family: $noto-serif;
-        size: 1.125em;
+        size: $body-size;
     }
 
-    line-height: 1.4em;
+    text-align: justify;
+    line-height: $golden;
 
     &.light {
         font-weight: $light;
@@ -262,16 +267,150 @@ p {
     float: left;
     font: {
         family: $noto-serif;
-        size: em(110px);
+        // size: em(110px);
+        size: 5em;
         weight: $regular;
     }
 
     line-height: 80px;
     color: $red;
     padding-right: 10px;
-    margin-top: 10px;
-    margin-bottom: -1px;
+    margin-top: 5px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*Quotations*/
+q {
+    display: inline;
+    color: $grey;
+
+    font: {
+        family: $noto-serif;
+        size: 22px;
+        weight: $light;
+        style: italic;
+    }
+
+    line-height: $golden;
+
+    &:before {
+        content: open-quote;
+    }
+    &:after {
+        content: close-quote;
+    }
+}
+
+
+/*Quotations Important*/
+.important {
+    @include margin(50px 20px 70px 85px);
+
+    & q:before {
+        content: "''";
+        position: absolute;
+        color: $red;
+
+        font: {
+            family: $noto-serif;
+            size: em(110px);
+            weight: $regular;
+            style: italic;
+        }
+
+        line-height: 80px;
+        padding-right: 10px;
+        @include margin(10px null -1px -75px);
+    }
+
+    & q:after {
+        content: "''";
+    }
+}
+
+
+.quote {
+    @include margin(50px 20px 50px 20px);
+}
+
+.author {
+    float: right;
+    font : {
+        size: 1em;
+        weight: $light;
+    }
+    color: $light-grey;
+    line-height: 1.4;
+}
+
+
+
+
+/* ARTICLE STYLES */
+article {
+    & p {
+        @include margin(null 70px);
+    }
+    & .pie p {
+        color: $light-grey;
+
+        font : {
+            family: $proxima_nova_light;
+            size: em(14px);
+            weight: $light;
+        }
+        line-height: 1.4;
+
+        &:before {
+            display: block;
+            content: "";
+            height: 1px;
+            width: 100%;
+            background-color: $light-grey;
+            margin-top: 15px;
+        }
+    }
+
+}
+
+/*Imágenes blog*/
+.image {
+    @include padding(20px 0);
+    @include margin(null -30px null -20px);
+    & p {
+        margin: 0px;
+        color: $light-grey;
+        font : {
+            // crear mixin para esto
+            family: $proxima_nova_light;
+            size: em(14px);
+            weight: $light;
+        }
+        line-height: 1.4;
+        padding-left: 20px;
+    }
+}
+
+
+
+
+
+
 
 
 
